==> younew/grbl/stepper.c <==
#include "stepper.h"
#include "config.h"
#include "settings.h"
#include "planner.h"
#define F_CPU   (u32)(168000000)
#define TICKS_PER_MICROSECOND (u32)(F_CPU/2/1000000)
#define CYCLES_PER_ACCELERATION_TICK (u32)((TICKS_PER_MICROSECOND*1000000)/ACCELERATION_TICKS_PER_SECOND)
#define F_CPU   (u32)(168000000)  //CPU 168Mhz
#define TICKS_PER_MICROSECOND (u32)(F_CPU/84/1000000)//定时器计数频率为2Mhz
#define CYCLES_PER_ACCELERATION_TICK (u32)((TICKS_PER_MICROSECOND*1000000)/ACCELERATION_TICKS_PER_SECOND)

void st_wake_up() 
{
  // Enable steppers by resetting the stepper disable port
#ifdef STEPPERS_DISABLE
  if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { 
    STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); 
  } else { 
    STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT);
  }  
#endif
  if (sys.state == STATE_CYCLE) {
    // Initialize stepper output bits
    out_bits = (0) ^ (settings.invert_mask); 
    // Initialize step pulse timing from settings. Here to ensure updating after re-writing.
    #ifdef STEP_PULSE_DELAY
      // Set total step pulse time after direction pin set. Ad hoc computation from oscilloscope.
      step_pulse_time = (((settings.pulse_microseconds+STEP_PULSE_DELAY-2)*TICKS_PER_MICROSECOND) >> 3);
      // Set delay between direction pin write and step command.
      OCR2A = -(((settings.pulse_microseconds)*TICKS_PER_MICROSECOND) >> 3);
    #else // Normal operation
      // Set step pulse time. Ad hoc computation from oscilloscope. Uses two's complement.
      step_pulse_time = settings.pulse_microseconds*2-1;//(((settings.pulse_microseconds-2)*TICKS_PER_MICROSECOND) >> 3);
    #endif
    // Enable stepper driver interrupt
    TIM_Cmd(TIM_STEP_MOTOR, ENABLE);//TIMSK1 |= (1<<OCIE1A);
    TIM_ITConfig(TIM_STEP_MOTOR, TIM_IT_Update, ENABLE);
  }
}

void st_go_idle() 
{
  // Disable stepper driver interrupt
  TIM_ITConfig(TIM_STEP_MOTOR, TIM_IT_Update, DISABLE);//DISABLE
  TIM_Cmd(TIM_STEP_MOTOR, DISABLE);//TIMSK1 &= ~(1<<OCIE1A); 
  // Disable steppers only upon system alarm activated or by user setting to not be kept enabled.
  if ((settings.stepper_idle_lock_time != 0xff) || bit_istrue(sys.execute,EXEC_ALARM)) {
    // Force stepper dwell to lock axes for a defined amount of time to ensure the axes come to a complete
    // stop and not drift from residual inertial forces at the end of the last movement.
    // 延时一段时间，确保电机停止，消除惯性
    delay_ms(settings.stepper_idle_lock_time);
#ifdef STEPPERS_DISABLE
    if (bit_istrue(settings.flags,BITFLAG_INVERT_ST_ENABLE)) { 
      STEPPERS_DISABLE_PORT &= ~(1<<STEPPERS_DISABLE_BIT); 
    } else { 
      STEPPERS_DISABLE_PORT |= (1<<STEPPERS_DISABLE_BIT); 
    }   
#endif
  }
}

void st_init(void)
{
	TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
  NVIC_InitTypeDef NVIC_InitStructure;

  step_io_init();
	TIM_DeInit(TIM_STEP_MOTOR);
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
	TIM_TimeBaseStructure.TIM_Period = 1000;//(u16) (STEP_MOTOR_TIM_PERIOD - 1);
	TIM_TimeBaseStructure.TIM_Prescaler = 42-1;//STEP_MOTOR_TIM_PRESCALE - 1;
	TIM_TimeBaseStructure.TIM_ClockDivision = TIM_CKD_DIV1;
	TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
	TIM_TimeBaseInit(TIM_STEP_MOTOR, &TIM_TimeBaseStructure);

	TIM_SetCounter(TIM_STEP_MOTOR, 0);
	TIM_ARRPreloadConfig(TIM_STEP_MOTOR, ENABLE);
	// TIM IT enable//
	TIM_ClearITPendingBit(TIM_STEP_MOTOR, TIM_IT_Update);
	TIM_ITConfig(TIM_STEP_MOTOR, TIM_IT_Update, ENABLE);
	TIM_ClearITPendingBit(TIM_STEP_MOTOR, TIM_IT_Update);
  
	TIM_Cmd(TIM_STEP_MOTOR, DISABLE);
  // Enable the TIM2 global Interrupt 
  NVIC_InitStructure.NVIC_IRQChannel = TIM2_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);

  TIM_DeInit(TIM_STEP_MOTOR_DELAY);
  RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM5, ENABLE);
  TIM_TimeBaseStructure.TIM_Prescaler = 42-1;
  TIM_TimeBaseInit(TIM_STEP_MOTOR_DELAY, &TIM_TimeBaseStructure);
  TIM_SetCounter(TIM_STEP_MOTOR_DELAY, 0);
	TIM_ARRPreloadConfig(TIM_STEP_MOTOR_DELAY, ENABLE);
	// TIM IT enable//
	TIM_ClearITPendingBit(TIM_STEP_MOTOR_DELAY, TIM_IT_Update);
	TIM_ITConfig(TIM_STEP_MOTOR_DELAY, TIM_IT_Update, ENABLE);
	TIM_ClearITPendingBit(TIM_STEP_MOTOR_DELAY, TIM_IT_Update);
  
	TIM_Cmd(TIM_STEP_MOTOR_DELAY, DISABLE);
//#ifdef STEP_PULSE_DELAY
  // Enable the TIM2 global Interrupt 
  NVIC_InitStructure.NVIC_IRQChannel = TIM5_IRQn;
  NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 2;
  NVIC_InitStructure.NVIC_IRQChannelSubPriority = 1;
  NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
  NVIC_Init(&NVIC_InitStructure);
//#endif
  // Start in the idle state, but first wake up to check for keep steppers enabled option.
  st_wake_up();
  st_go_idle();
}

static uint32_t config_step_timer(uint32_t cycles)
{
	TIM_STEP_MOTOR->ARR = cycles;
  TIM_STEP_MOTOR->ARR = cycles;
	return(cycles);
}
